--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     <div class="bar"></div>
                 </div>
                 <audio controls style="width: 100%; margin-top: 20px;">
-                    <source src="alpha-frequency.mp3" type="audio/mpeg">
+                    <source src="frequencia.mp3" type="audio/mpeg">
                     Seu navegador não suporta áudio.
                 </audio>
             </div>
