--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
             <div class="audio-player">
                 <h3>🎵 Frequência Alpha Anti-Ansiedade (8-12 Hz)</h3>
-                <p>Experimente agora. Sinta sua mente relaxar em 60 segundos</p>
+                <p>Experimente agora. Sinta sua mente relaxar em 50 segundos, feche os olhos e repsire fundo</p>
                 <div class="audio-visualizer">
                     <div class="bar"></div>
                     <div class="bar"></div>
