--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 
                 <!-- CORREÇÃO: Botão menor e centralizado -->
                 <div class="btn-container">
-                    <a href="#" class="btn btn-danger btn-small btn-center">
+                    <a href="https://seguro.evoluamais.click/api/public/shopify?product=1677981271639&store=16779" class="btn btn-danger btn-small btn-center">
                         SIM! QUERO ACABAR COM ANSIEDADE AGORA
                     </a>
                 </div>
