--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <!-- CTA Final -->
             <!-- CORREÇÃO: Botão menor e centralizado -->
             <div class="btn-container">
-                <a href="#" class="btn btn-danger btn-small btn-center">
+                <a href="https://seguro.evoluamais.click/api/public/shopify?product=1677981271639&store=16779" class="btn btn-danger btn-small btn-center">
                      🚀 SIM! QUERO VIVER SEM ANSIEDADE!
                 </a>
                 <p style="margin-top: 20px; color: #999;">
